MFLP-85 Made TypeReference.Sequence interable. Tidy up.